[gd_scene load_steps=20 format=2]

[ext_resource path="res://recursos/modelos/RecursosPresentacion/Revamped.otf" type="DynamicFontData" id=1]
[ext_resource path="res://juego/ItemsDanio/Sierra.tscn" type="PackedScene" id=2]
[ext_resource path="res://recursos/modelos/hud/Kenney Pixel Square.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://juego/Menus/MenuGameOver.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
size = 68
outline_size = 10
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 1 )

[sub_resource type="ViewportTexture" id=2]
viewport_path = NodePath("Viewport")

[sub_resource type="StyleBoxFlat" id=9]
bg_color = Color( 0.12549, 0.12549, 0.12549, 1 )
border_width_left = 6
border_width_top = 6
border_width_right = 6
border_width_bottom = 6
border_color = Color( 0.352941, 0, 0.564706, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
corner_detail = 10

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.643137, 0.643137, 0.643137, 1 )
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color( 0.929412, 0.678431, 1, 1 )
border_blend = true
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
corner_detail = 10

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0, 0, 0, 1 )
border_width_left = 6
border_width_top = 6
border_width_right = 6
border_width_bottom = 6
border_color = Color( 0.301961, 0, 0.486275, 1 )
border_blend = true
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5
corner_detail = 10

[sub_resource type="DynamicFont" id=3]
size = 36
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxLine" id=16]
thickness = 5

[sub_resource type="StyleBoxFlat" id=15]
bg_color = Color( 0, 0.509804, 0.596078, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0.192157, 0.192157, 0.192157, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=13]
bg_color = Color( 0.301961, 0.898039, 1, 1 )
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8
border_color = Color( 0.4, 0.4, 0.4, 1 )
border_blend = true
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=14]
bg_color = Color( 0, 0.328018, 0.384314, 1 )
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color( 0.00784314, 0.00784314, 0.00784314, 1 )
border_blend = true
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="DynamicFont" id=5]
size = 32
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.847059, 0, 0.619608, 1 )
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_color = Color( 0.211765, 0.211765, 0.211765, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
corner_detail = 10

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 1, 0.564706, 0.878431, 1 )
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color( 1, 1, 1, 1 )
border_blend = true
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
corner_detail = 10

[sub_resource type="StyleBoxFlat" id=8]
bg_color = Color( 0.509804, 0, 0.372549, 1 )
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color( 0, 0, 0, 1 )
border_blend = true
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
corner_detail = 10

[sub_resource type="DynamicFont" id=4]
size = 32
font_data = ExtResource( 3 )

[node name="MenuGameOver" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}
pantalla_carga = "res://juego/Menus/PantallaCarga.tscn"

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0.156863, 0.180392, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -231.5
margin_top = 42.8598
margin_right = 231.5
margin_bottom = 113.86
custom_fonts/font = SubResource( 1 )
text = "GAME OVER"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Viewport" type="Viewport" parent="."]
size = Vector2( 600, 600 )
own_world = true
transparent_bg = true
msaa = 1
usage = 3
render_target_v_flip = true

[node name="Sierra" parent="Viewport" instance=ExtResource( 2 )]

[node name="Camera" type="Camera" parent="Viewport"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1 )

[node name="OmniLight" type="OmniLight" parent="Viewport"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.8, 0 )
light_color = Color( 1, 0.980392, 0.690196, 1 )
light_energy = 5.0

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 248, 360 )
texture = SubResource( 2 )

[node name="Sprite2" type="Sprite" parent="."]
position = Vector2( 992, 360 )
texture = SubResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -175.0
margin_top = -484.0
margin_right = 175.0
margin_bottom = -96.0
custom_constants/separation = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonContinuar" type="Button" parent="VBoxContainer"]
margin_right = 350.0
margin_bottom = 118.0
size_flags_vertical = 3
custom_styles/hover = SubResource( 9 )
custom_styles/pressed = SubResource( 10 )
custom_styles/normal = SubResource( 11 )
custom_fonts/font = SubResource( 3 )
text = "Reintentar"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator" type="HSeparator" parent="VBoxContainer"]
margin_top = 128.0
margin_right = 350.0
margin_bottom = 132.0
custom_styles/separator = SubResource( 16 )

[node name="ButtonMenuPrincipal" type="Button" parent="VBoxContainer"]
margin_top = 142.0
margin_right = 350.0
margin_bottom = 260.0
size_flags_vertical = 3
custom_styles/hover = SubResource( 15 )
custom_styles/pressed = SubResource( 13 )
custom_styles/normal = SubResource( 14 )
custom_fonts/font = SubResource( 5 )
text = "Menu Principal"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonSalir" type="Button" parent="VBoxContainer"]
margin_top = 270.0
margin_right = 350.0
margin_bottom = 388.0
size_flags_vertical = 3
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 7 )
custom_styles/normal = SubResource( 8 )
custom_fonts/font = SubResource( 4 )
text = "Salir"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="VBoxContainer/ButtonContinuar" to="." method="_on_ButtonContinuar_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonMenuPrincipal" to="." method="_on_ButtonMenuPrincipal_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonSalir" to="." method="_on_ButtonSalir_pressed"]
